Refactored: Code to create a separate jar and include the jar in the project

--- a/build.gradle
+++ b/build.gradle
@@ -14,5 +14,6 @@ dependencies {
 }
 dependencies {
     compile "com.opencsv:opencsv:4.0"
+    compile(files("./lib/CensusAnalyserSecond.jar"))
 }
 
